more CSS commits, I cannot be stopped. really need to learn squash/rebase so this looks cleaner

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 
 .grid-container {
     max-width:80%;
-    margin:10%;
+    margin:0 5% 0 5%;
     display: flex;
     flex-direction:column;
     min-width:fit-content;
